--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uglyHTML</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Unica One' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
 </head>
 
 <body>
@@ -21,13 +24,13 @@
         <h3>
             It's about time...
         </h3>
-        <img src="assets/manyWatches.png" alt="Many Watches">
+        <img src="assets/manyWatches.png" alt="Many Watches" id="titleImage">
     </div>
 
     <div class="all_watches_container">
 
         <article class="watch_container">
-            <img src="assets/classicWatch.png" alt="Classic Watch">
+            <img id="classicWatch" src="assets/classicWatch.png" alt="Classic Watch">
             <div class="text">
 
                 <h2>
